src/components/track/track.css
.track {
	display: flex;
	margin-bottom: 2rem;
	align-items: center;
	max-width: 50rem;
}

.trackHero {
	composes: track;
	margin-bottom: 7rem;
}

.trackSmall {
	composes: track;
	margin-bottom: 0.22rem;
}

.artwork {
	position: relative;
	width: 4rem;
	height: 4rem;
	background-size: cover;
	min-width: 4rem;
	flex-shrink: 0;
}

.artwork:after {
	position: absolute;
	width: 100%;
	height: 100%;
}

.artwork:hover {
	opacity: 0.9;
	cursor: pointer;
}

.artworkHero {
	composes: artwork;
	width: 10rem;
	min-width: 10rem;
	height: 10rem;
}

.artworkSmall {
	composes: artwork;
	width: 2rem;
	min-width: 2rem;
	height: 2rem;

}

.artistsAndTrackName {
	font-size: 1rem;
	min-width: 15rem;
	color: rgba(255, 255, 255, 0.9);
	margin-left: 2rem;
	letter-spacing: 0.05rem;
	text-shadow: 0 0 0.2rem rgba(0, 0, 0, 0.5);
	text-overflow: ellipsis;
	overflow: hidden;
	flex-shrink: 2;
}

.artistsAndTrackNameHero {
	composes: artistsAndTrackName;
	font-size: 1.4rem;
}

.artistsAndTrackNameSmall {
	composes: artistsAndTrackName;
	font-size: 0.9rem;
	margin-left: 1rem;
	min-width: inherit;
	flex-grow: 2;
}

.artists {
	font-weight: 200;
	font-size: 77%;
	color: rgba(255, 255, 255, 0.70);
}

.artist:hover {
	text-decoration: underline;
	cursor: pointer;
}

.artistsHero {
	font-size: 70%;
	composes: artists;
}

.artistsSmall {
	font-size: 0.7rem;
	composes: artists;
	white-space: nowrap;
	text-overflow: ellipsis;
	overflow: hidden;
}

.name {
	font-weight: 200;
	color: rgba(255, 255, 255, 0.95);
	margin-bottom: 0.3rem;
}

.name:hover {
	color: rgba(255, 255, 255, 1);
	cursor: pointer;
}

.nameHero {
	composes: name;
}

.nameSmall {
	composes: name;
	font-size: 0.8rem;
	white-space: nowrap;
	text-overflow: ellipsis;
	overflow: hidden;
	margin-bottom: 0.1rem;
}

.votes {
	padding-left: 0.5rem;
	display: flex;
	flex-direction: row-reverse;
	margin: 0.2rem 0.5rem 0.2rem auto;
	opacity: 0.9;
	flex-shrink: 0;
}

.votes:hover {
	opacity: 1;
}

.votesHero {
	margin: 0.7rem auto 0 0;
	display: flex;
	float: left;
	flex-direction: row-reverse;
}

.votesSmall {
	composes: votes;
	margin: 0;
}

.avatarContainer {
	opacity: 1;
	margin-right: -0.9rem;
	transform: scale(0.75);
}

.avatarContainerHero {
	composes: avatarContainer;
	transform: none;
}

.avatarContainerSmall {
	composes: avatarContainer;
	transform: none;
}

.voteUpButton {
	margin-right: 0.1rem;
	margin-left: 1rem;
	margin-top: 0;
	padding: 0.2rem;
	width: 1.5rem;
	z-index: 2;
	opacity: 0.4;
	transform: scale(1.02);
	cursor: pointer;
}

.voteUpButton:hover {
	opacity: 0.7;
}

.voteUpButtonSmall {
	composes: voteUpButton;
	padding: 0;
}

.buttons {
	margin-right: 1rem;
	opacity: 0;
	flex-shrink: 0;
	display: flex;
}

.track:hover .buttons {
	opacity: 1;
}

.buttonsHero {
	composes: buttons;
	margin-left: auto;
}

.buttonsSmall {
	composes: buttons;
	margin-right: -3.5rem;
}

.button {
	opacity: 0.7;
	cursor: pointer;
	padding: 0.3rem;
}

.button:hover {
	opacity: 0.95;
}

.dotsButton {
	composes: button;
}

.progress {
	position: absolute;
	bottom: 0;
	left: 0;
	height: 0.5rem;
	background-color: rgba(255, 255, 255, 0.7);
}

.progressBg {
	composes: progress;
	bottom: -0.5rem;
	background-color: rgba(255, 255, 255, 0.1);
	width: 100%;
}

.reactionButton {
	padding: 0.15rem;
	margin-right: 0.5rem;
	margin-left: 0;
	transform: scale(0.8);
	width: 1.5rem;
	filter: grayscale(90%);
	opacity: 0.8;
	cursor: pointer;
	transition: all 200ms cubic-bezier(0.815, 0.015, 0.440, 1.000);
}

.reactionButton:hover {
	opacity: 1;
	transform: scale(0.9);
	filter: grayscale(0%);
}

@media screen and (max-width: 600px) {
	.track {

	}

	.artworkHero {
		composes: artwork;
		width: 7rem;
		min-width: 7rem;
		height: 7rem;
	}

	.avatarContainerHero {
		transform: scale(0.7);
		transform-origin: 0 50%;
	}

	.nameHero {
		font-size: 70%;
	}

	.artistsAndTrackName {
		min-width: 0;
	}

	.artistsAndTrackNameHero {
		min-width: 8rem;
	}

	.track .buttons {
		opacity: 1;
	}
}

